# PRIMCS

./: .flake8  .gitignore  AUTHENTICATION_ARCHITECTURE.md  Dockerfile  ISSUES.md  LINTING_FIXES_SUMMARY.md  README.md  TESTING.md  TEST_ANALYSIS.md  UPDATED_AUTH_ISSUE.md  firecracker_prims_analysis.md  glama.json  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
.github/workflows/: ci.yml  lint.yml
examples/: artifact_download.py  inspect_workspace.py  list_tools.py  mount_and_run.py  run_code.py  session_persistence.py
scripts/: docker_run.sh  setup_env.sh  test.sh
server/: auth_context.py  config.py  main.py
server/prompts/: python_programmer.py
server/sandbox/: downloader.py  env.py  runner.py
server/tools/: __init__.py  mount_file.py  persist_artifact.py  run_code.py  workspace_inspect.py
tests/: conftest.py
tests/integration/: test_mcp_protocol.py
tests/unit/: test_config.py  test_main.py  test_run_code_tool.py  test_sandbox_env.py  test_sandbox_runner.py
